languages/montiarc-fe/src/test/resources/contextconditions/valid/TypeParameterNamesUnique.arc
package valid;

component TypeParameterNamesUnique<S, T> {
}