languages/montiarc-fe/src/test/resources/contextconditions/invalid/TypeParameterNamesNotUnique.arc
package invalid;

component TypeParameterNamesNotUnique<T, T> {
}